
[package]
name = "simple"
description = "The simplest graphics library, inspired by LOVE2D"
version = "0.2.1"
repository = "https://github.com/alexandercampbell/simple"
keywords = ["simple","graphics","2D"]
authors = ["Alexander Campbell <alexanderhcampbell@gmail.com>"]
license = "Zlib"
readme = "README.md"

[lib]
name = "simple"
path = "src/lib.rs"
crate-type = ["static"]

[dependencies]
sdl2 = "0.6.1" # Surprise. It's actually an SDL2 wrapper.
sdl2-sys = "0.6.1"
libc = "0.1.8"
rand = "0.3.8"
num = "0.1.24"

[dependencies.sdl2_image]
git = "https://github.com/xsleonard/rust-sdl2_image"
version = "0.2.4"

