
[package]
name = "simple"
description = "The simplest graphics library, inspired by LOVE2D"
version = "0.3.0"
repository = "https://github.com/alexandercampbell/simple"
keywords = ["simple","graphics","2D"]
authors = ["Alexander Campbell <alexanderhcampbell@gmail.com>"]
license = "Zlib"
readme = "README.md"

[lib]
name = "simple"
path = "src/lib.rs"

[dependencies]
libc = "0.1.8"
rand = "0.3.8"
num = "0.1.24"

[dependencies.sdl2]
version = "0.32.1"
default-features = false
features = ["image", "unsafe_textures"]

